--- a/templates/test_contact.html
+++ b/templates/test_contact.html
@@ -93,7 +93,7 @@
             <div class="col-xs-6 col-lg-4">
               <h2>Manager</h2>
               <p>Name: Татьяна Колесник </p>
-	      <p>Email: tatyana@outsource-people.com</p>
+	      <!--<p>Email: tatyana@outsource-people.com</p>--> <!--ERROR SIM-->
 	      <p>Skype: princessataniakolesnik</p>
 	      <p>Phone: +38 063 729 45 67 </p>
               <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
