--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
                         </tr>
                     </tbody>
                 </table>
-                Курс будет называться <b>PyBursa<b>
+                Курс будет называться <b>PyBursa</b>
             </div>
         </div>
     </div>
