--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,9 @@
 body {
   padding-top: 20px;
 }
+.footer {
+  text-align: center;
+}
 .starter-template {
   padding: 40px 15px;
   text-align: center;
