--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,94 +9,80 @@
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
-    
     <!-- Custom styles for this template -->
     <link href="../static/css/style.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-    <body>
-
-    <div class="container">
-
-      <!-- The justified navigation menu is meant for single line per list item.
-           Multiple lines will require custom code not provided by Bootstrap. -->
-      <div class="masthead">
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+    </head>
+  <body>
+    <div class="masthead">
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="">PyBursa</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
+            </button>
+          </div>
+          <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
             <li class="active"><a href="contact.html">Contacts</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-      </div>
-
-      <!-- Jumbotron -->
-      <div class="jumbotron">
-         <!-- <p class="lead">Learn to program in Python, a powerful language used by sites like YouTube and Dropbox.</p>
-        <p><a class="btn btn-sm btn-success" href="http://getbootstrap.com/examples/justified-nav/#" role="button">Get started today</a></p>-->
-      </div>
-
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <div class="starter-regullar">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h3>Founder.</h3>
-          <img src="../static/images/pasha.jpg"  alt="Pavel Obod" style="width:90px;height:120px;">
-          <p class="text-danger">Name: Pavel Obod</p>
-          <p> Email: itbursa100@gmail.com </br> Skype: azaless </br> Phone: +38 096 469 15 56 </p></p>
-          <p>
-            <a class="btn btn-default" href="#" role="button"> Feedback </a>
-          </p>
-        </div>
-        
-        <div class="col-lg-4">
-          <h3>Director.</h3>
+          <h3>Director</h3>
           <img src="../static/images/darka.jpg"  alt="Daria Mykhalevych" style="width:90px;height:120px;">
           <p class="text-danger">Name: Daria Mykhalevych</p>
-          <p> Email: daria.mykhalevych@gmail.com </br> Skype:  darka.darka.darka.darka. </br> Phone: +38 096 469 15 57 </p>
+          <p>Email: daria.mykhalevych@gmail.com</p>
+          <p>Skype:  darka.darka.darka.darka.</p>
+          <p>Phone: +38 096 469 15 57</p>
           <p>
-            <a class="btn btn-default" href="#" role="button"> Feedback </a>
+            <a class="btn btn-default" href="#" role="button"> Feedback</a>
           </p>
-       </div>
-       
+        </div>
+
         <div class="col-lg-4">
-          <h3>Manager.</h3>
+          <h3>Manager</h3>
           <img src="../static/images/alena.jpg"  alt="Alyona Chaika" style="width:90px;height:120px;">
           <p class="text-danger">Name: Alyona Chaika</p>
-          <p> Email: alena.itbursa@gmail.com </br> Skype:  alena.itbursa </br> Phone: +38 063 625 07 55 </p>
+          <p>Email: alena.itbursa@gmail.com</p>
+          <p>Skype:  alena.itbursa</p>
+          <p>Phone: +38 063 625 07 55</p>
           <p>
-            <a class="btn btn-default" href="#" role="button"> Feedback </a>
+            <a class="btn btn-default" href="#" role="button"> Feedback</a>
+          </p>
+        </div>
+
+        <div class="col-lg-4">
+          <h3>Founder</h3>
+          <img src="../static/images/pasha.jpg"  alt="Pavel Obod" style="width:90px;height:120px;">
+          <p class="text-danger">Name: Pavel Obod</p>
+          <p>Email: itbursa100@gmail.com</p>
+          <p>Skype: azaless</p>
+          <p>Phone: +38 096 469 15 56</p>
+          <p>
+            <a class="btn btn-default" href="#" role="button"> Feedback</a>
           </p>
         </div>
       </div>
 
-      <!-- Site footer -->
-      <footer class="footer">
-        <p>&copy; PyBursa 2015</p>
-      </footer>
-
-    </div> <!-- /container -->
-
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
-  
-
-</body>
+    </div>
+    
+    <!-- Site footer -->
+    <footer class="footer">
+      <p>&copy; PyBursa 2015</p>
+    </footer>
+    
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
