--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Web with Python</title>
+    <title>Contacts</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -19,9 +19,49 @@
   </head>
   <body>
 <ul class="nav nav-pills">
+  <li role="presentation" class="active"><a href="#">PyBursa</a></li>
   <li role="presentation"><a href="index.html">Main</a></li>
   <li role="presentation"><a href="#">Contacts</a></li>
 </ul>
+<div class="container">
+<div class="panel panel-default">
+  <div class="panel-heading">Director</div>
+  <div class="panel-body">
+    <ul>Name: Lars Bender</ul>
+    <ul>Skype:bender.lars</ul>
+    <ul>Email:bender@futurama.com</ul>
+    <ul>Phone:020303000</ul>
+  </div>
+</div>
+</div>
+
+<div class="container">
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Manager</h3>
+  </div>
+  <div class="panel-body">
+    <ul>Name: Lila Stich</ul>
+    <ul>Skype: lilo&stich</ul>
+    <ul>Email: lilo@gmail.com</ul>
+    <ul>Phone:020100189</ul>
+  </div>
+</div>
+</div>
+
+<div class="container">
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Founder</h3>
+  </div>
+  <div class="panel-body">
+    <ul>Name: Maks Fry</ul>
+    <ul>Skype:maks.maks.maks</ul>
+    <ul>Email:mals.maks@some.com</ul>
+    <ul>Phone:0320390230</ul>
+  </div>
+</div>
+</div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="../static/js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
