--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,21 @@
   </head>
   <body>
 <ul class="nav nav-pills">
+  <li role="presentation" class="active"><a href="#">PyBursa</a></li>
   <li role="presentation"><a href="#">Main</a></li>
   <li role="presentation"><a href="contact.html">Contacts</a></li>
 </ul>
 <div class="container">
 <div class="jumbotron">
   <h2>Description</h2>
-  <p>Test container</p>
+  <p>Course description</p>
+</div>
+</div>
+
+<div class="container">
+<div class="jumbotron">
+  <h2> Program</h2>
+  <p>Course program</p>
 </div>
 </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
