--- a/templates/contact.html
+++ b/templates/contact.html
@@ -37,8 +37,8 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h3>Director</h3>
           <img src="../static/images/darka.jpg"  alt="Daria Mykhalevych" style="width:90px;height:120px;">
+          <h3>Director</h3>
           <p class="text-danger">Name: Daria Mykhalevych</p>
           <p>Email: daria.mykhalevych@gmail.com</p>
           <p>Skype:  darka.darka.darka.darka.</p>
@@ -49,8 +49,8 @@
         </div>
 
         <div class="col-lg-4">
-          <h3>Manager</h3>
           <img src="../static/images/alena.jpg"  alt="Alyona Chaika" style="width:90px;height:120px;">
+          <h3>Manager</h3>
           <p class="text-danger">Name: Alyona Chaika</p>
           <p>Email: alena.itbursa@gmail.com</p>
           <p>Skype:  alena.itbursa</p>
@@ -61,8 +61,8 @@
         </div>
 
         <div class="col-lg-4">
-          <h3>Founder</h3>
           <img src="../static/images/pasha.jpg"  alt="Pavel Obod" style="width:90px;height:120px;">
+          <h3>Founder</h3>
           <p class="text-danger">Name: Pavel Obod</p>
           <p>Email: itbursa100@gmail.com</p>
           <p>Skype: azaless</p>
@@ -83,6 +83,6 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
   </body>
 </html>
