add some glyphs in contact.html

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,6 +19,13 @@
       <li role="presentation"><a href="index.html">Main</a></li>
     </ul>
     <h3 class="dir">Director</h3>
+    <div>
+      <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
+
+    </div>   
     <div class="bs-example" id="director">
       <ul class="list-group">
         <li class="list-group-item">Name: <span class="spn">Татьяна Орехова</span></li>
