--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,20 +23,12 @@ ol.course {
   font-weight: normal;
   font-variant:normal;
 }
-.navbar-inverse .navbar-brand:hover, 
-.navbar-inverse .navbar-brand:focus {
-  background-color: transparent;
-  color: #999999;
-}
-
 .footer {
   padding-top: 40px;
   padding-bottom: 40px;
   margin-top: 40px;
   border-top: 1px solid #eee;
 }
-
-/* Main marketing message and sign up button */
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -45,9 +37,6 @@ ol.course {
   padding: 14px 24px;
   font-size: 21px;
 }
-
-/* Customize the nav-justified links to be fill the entire space of the .navbar */
-
 .nav-justified {
   background-color: #eee;
   border: 1px solid #ccc;
@@ -60,13 +49,13 @@ ol.course {
   font-weight: bold;
   color: #777;
   text-align: center;
-  background-color: #e5e5e5; /* Old browsers */
+  background-color: #e5e5e5;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#e5e5e5));
   background-image: -webkit-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%);
   background-image:      -o-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%);
   background-image:         linear-gradient(to bottom, #f5f5f5 0%,#e5e5e5 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
-  background-repeat: repeat-x; /* Repeat the gradient */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#e5e5e5',GradientType=0 );
+  background-repeat: repeat-x;
   border-bottom: 1px solid #d5d5d5;
 }
 .nav-justified > .active > a,
@@ -84,7 +73,6 @@ ol.course {
   border-bottom: 0;
   border-radius: 0 0 5px 5px;
 }
-
 @media (min-width: 768px) {
   .nav-justified {
     max-height: 52px;
@@ -102,10 +90,7 @@ ol.course {
     border-radius: 0 5px 5px 0;
   }
 }
-
-/* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
   .masthead,
   .marketing,
   .footer {
