--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,13 +19,6 @@
       <li role="presentation"><a href="index.html">Main</a></li>
     </ul>
     <h3 class="dir">Director</h3>
-    <div>
-      <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-      <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>
-      <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
-
-    </div>   
     <div class="bs-example" id="director">
       <ul class="list-group">
         <li class="list-group-item">Name: <span class="spn">Татьяна Орехова</span></li>
@@ -51,7 +44,24 @@
         <li class="list-group-item">Email: <span class="label label-default">itbursa100@gmail.com</span></li>
         <li class="list-group-item">Phone: <span class="label label-info">+38 099 173 67 43</span></li>
       </ul>
-    </div>    
+    </div>
+    <div>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
+      </button>
+    </div>       
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
