--- a/templates/contact.html
+++ b/templates/contact.html
@@ -47,19 +47,19 @@
     </div>
     <div>
       <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>star
       </button>
       <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-star" aria-hidden="true"></span>dff
       </button>
       <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>ff
       </button>
       <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>rrh
       </button>
       <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>tte
       </button>
     </div>       
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
