add some buttons in index.html

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -45,7 +45,7 @@
         <li class="list-group-item">Phone: <span class="label label-info">+38 099 173 67 43</span></li>
       </ul>
     </div>
-    <div>
+    <div class="container">
       <button type="button" class="btn btn-default" aria-label="Left Align">
         <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>star
       </button>
