--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  	<meta name="description" content="Program">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Main Page</title>
     <!-- Bootstrap -->
@@ -33,7 +33,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Main <span class="sr-only">(current)</span></a></li>
+                    <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
                     <li><a href="contact.html">Contacts</a></li>
                 </ul>
             </div>
@@ -44,7 +44,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Description</h1>
+            	<h1>PyBursa</h1>
+                <h2>Description</h2>
                 <p>Наибольшей проблемой всех учебников и статей, по которым начинают изучать Python - это осутствие практики с освоенным материалом.</p>
                 <p>Можно читать тонны ресурсов по веб-программированию на Python - и не научиться ничему, потому что знания, которые вы не успели применить,очень быстро забываются.</p>
                 <p>Наибольшей проблемой всех учебников и статей, по которым начинают изучать Python - это осутствие практики с освоенным материалом.</p>
@@ -77,7 +78,6 @@
                         </tr>
                     </tbody>
                 </table>
-                Курс будет называться <b>PyBursa</b>
             </div>
         </div>
     </div>
