--- a/templates/index.html
+++ b/templates/index.html
@@ -409,6 +409,36 @@
       <button type="button" class="btn btn-default" aria-label="Left Align">
         <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>tte
       </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>star
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>dff
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>ff
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-music" aria-hidden="true"></span>rrh
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>tte
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-road" aria-hidden="true"></span>star
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-time" aria-hidden="true"></span>dff
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>ff
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>rrh
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>tte
+      </button>
     </div>       
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
