--- a/templates/index.html
+++ b/templates/index.html
@@ -397,47 +397,47 @@
       <button type="button" class="btn btn-default" aria-label="Left Align">
         <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>star
       </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
+      <button type="button" class="btn btn-default:focus" aria-label="Left Align">
         <span class="glyphicon glyphicon-star" aria-hidden="true"></span>dff
       </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
+      <button type="button" class="btn btn-default:active" aria-label="Left Align">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>ff
       </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
+      <button type="button" class="btn btn-default:hover" aria-label="Left Align">
         <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>rrh
       </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
+      <button type="button" class="btn btn-default:active" aria-label="Left Align">
         <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>tte
       </button>
       <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>star
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>st
+      </button>
+      <button type="button" class="btn btn-primary" aria-label="Left Align">
+        <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>dffh
+      </button>
+      <button type="button" class="btn btn-primary:focus" aria-label="Left Align">
+        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>ff67
+      </button>
+      <button type="button" class="btn bbtn-primary:hover" aria-label="Left Align">
+        <span class="glyphicon glyphicon-music" aria-hidden="true"></span>rrh5
+      </button>
+      <button type="button" class="btn btn-primary:active" aria-label="Left Align">
+        <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>ttek
+      </button>
+      <button type="button" class="btn btn-success" aria-label="Left Align">
+        <span class="glyphicon glyphicon-road" aria-hidden="true"></span>startrek
       </button>
       <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>dff
+        <span class="glyphicon glyphicon-time" aria-hidden="true"></span>df0f
       </button>
       <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>ff
+        <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>fvcf
       </button>
       <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-music" aria-hidden="true"></span>rrh
+        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>rrhbvyg
       </button>
       <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>tte
-      </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-road" aria-hidden="true"></span>star
-      </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-time" aria-hidden="true"></span>dff
-      </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>ff
-      </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>rrh
-      </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>tte
+        <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>ttey7gyv
       </button>
     </div>       
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
