--- a/templates/index.html
+++ b/templates/index.html
@@ -439,7 +439,18 @@
       <button type="button" class="btn btn-default" aria-label="Left Align">
         <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>ttey7gyv
       </button>
-    </div>       
+    </div>
+    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default">Left</button>
+      </div>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default">Middle</button>
+      </div>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default">Right</button>
+      </div>
+  </div>       
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
