--- a/templates/index.html
+++ b/templates/index.html
@@ -393,97 +393,99 @@
 
       </tbody>
     </table>
-    <div class="container">
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>star
-      </button>
-      <button type="button" class="btn btn-default:focus" aria-label="Left Align">
-        <span class="glyphicon glyphicon-star" aria-hidden="true"></span>dff
-      </button>
-      <button type="button" class="btn btn-default:active" aria-label="Left Align">
-        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>ff
-      </button>
-      <button type="button" class="btn btn-default:hover" aria-label="Left Align">
-        <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>rrh
-      </button>
-      <button type="button" class="btn btn-default:active" aria-label="Left Align">
-        <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>tte
-      </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>st
-      </button>
-      <button type="button" class="btn btn-primary" aria-label="Left Align">
-        <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>dffh
-      </button>
-      <button type="button" class="btn btn-primary:focus" aria-label="Left Align">
-        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>ff67
-      </button>
-      <button type="button" class="btn bbtn-primary:hover" aria-label="Left Align">
-        <span class="glyphicon glyphicon-music" aria-hidden="true"></span>rrh5
-      </button>
-      <button type="button" class="btn btn-primary:active" aria-label="Left Align">
-        <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>ttek
-      </button>
-      <button type="button" class="btn btn-success" aria-label="Left Align">
-        <span class="glyphicon glyphicon-road" aria-hidden="true"></span>startrek
-      </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-time" aria-hidden="true"></span>df0f
-      </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>fvcf
-      </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>rrhbvyg
-      </button>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>ttey7gyv
-      </button>
-    </div>
-    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default">Left</button>
+    <div class="secret-zoo">
+      <div class="container">
+        <button type="button" class="btn btn-default" aria-label="Left Align">
+          <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>star
+        </button>
+        <button type="button" class="btn btn-default:focus" aria-label="Left Align">
+          <span class="glyphicon glyphicon-star" aria-hidden="true"></span>dff
+        </button>
+        <button type="button" class="btn btn-default:active" aria-label="Left Align">
+          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>ff
+        </button>
+        <button type="button" class="btn btn-default:hover" aria-label="Left Align">
+          <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>rrh
+        </button>
+        <button type="button" class="btn btn-default:active" aria-label="Left Align">
+          <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>tte
+        </button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>st
+        </button>
+        <button type="button" class="btn btn-primary" aria-label="Left Align">
+          <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>dffh
+        </button>
+        <button type="button" class="btn btn-primary:focus" aria-label="Left Align">
+          <span class="glyphicon glyphicon-search" aria-hidden="true"></span>ff67
+        </button>
+        <button type="button" class="btn bbtn-primary:hover" aria-label="Left Align">
+          <span class="glyphicon glyphicon-music" aria-hidden="true"></span>rrh5
+        </button>
+        <button type="button" class="btn btn-primary:active" aria-label="Left Align">
+          <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>ttek
+        </button>
+        <button type="button" class="btn btn-success" aria-label="Left Align">
+          <span class="glyphicon glyphicon-road" aria-hidden="true"></span>startrek
+        </button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">
+          <span class="glyphicon glyphicon-time" aria-hidden="true"></span>df0f
+        </button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">
+          <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>fvcf
+        </button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>rrhbvyg
+        </button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">
+          <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>ttey7gyv
+        </button>
       </div>
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default">Middle</button>
+      <div class="btn-group btn-group-justified" role="group" aria-label="...">
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-default">Left</button>
+        </div>
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-default">Middle</button>
+        </div>
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-default">Right</button>
+        </div>
       </div>
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default">Right</button>
+      <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          Dropdown
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
       </div>
-  </div>
-  <div class="dropdown">
-    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-      Dropdown
-      <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-      <li><a href="#">Action</a></li>
-      <li><a href="#">Another action</a></li>
-      <li><a href="#">Something else here</a></li>
-      <li><a href="#">Separated link</a></li>
-    </ul>
-  </div>
-  <div class="input-group">
-    <span class="input-group-addon" id="basic-addon1">@</span>
-    <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
-  </div>
+      <div class="input-group">
+        <span class="input-group-addon" id="basic-addon1">@</span>
+        <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+      </div>
 
-  <div class="input-group">
-    <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon2">
-    <span class="input-group-addon" id="basic-addon2">@example.com</span>
-  </div>
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon2">
+        <span class="input-group-addon" id="basic-addon2">@example.com</span>
+      </div>
 
-  <div class="input-group">
-    <span class="input-group-addon">$</span>
-    <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-    <span class="input-group-addon">.00</span>
-  </div>
+      <div class="input-group">
+        <span class="input-group-addon">$</span>
+        <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+        <span class="input-group-addon">.00</span>
+      </div>
 
-  <label for="basic-url">Your vanity URL</label>
-  <div class="input-group">
-    <span class="input-group-addon" id="basic-addon3">https://example.com/users/</span>
-    <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
-  </div>       
+      <label for="basic-url">Your vanity URL</label>
+      <div class="input-group">
+        <span class="input-group-addon" id="basic-addon3">https://example.com/users/</span>
+        <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+      </div>
+  </div>         
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
