added static/css/te.css, moved 4contact.css tostatic/css/style.css

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,7 +10,7 @@
     <title>Contact list</title>
 
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/4contact.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <link href="starter-template.css" rel="stylesheet">
 
