--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
     <link href="jumbotron.css" rel="stylesheet">
   </head>
 
@@ -27,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Main</a>
+          <a class="navbar-brand" href="index.html">Main</a>
           <a class="navbar-brand" href="contact.html">Contacts</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
