--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 			Курс подразумевает, что студенты уже освоили базовый python. 
 В рамках курса даются азы html/css, достаточные для формирования html страниц браузеру, но не достаточные для профессиональной верстки.
 Глубина освоения django будет достаточной для самостоятельного написания web-проектов, которые содержат редактируемые страницы, структуру специфических данных, отображение их на фронтенде и создание-редактирование этих данных.
-Все разделы django будут освещены.
+Все разделы django будут освещены.(temp)
 			</p>
 			</div>
       </div>
