--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
             </button>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Main <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
             </ul>
         </div>
 
@@ -74,6 +74,8 @@
     <button type="submit" class="btn">Search</button>
 </form>
 <h4 class="program">Program</h4>
+
+<p>Program content</p>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
