Index.html added coma

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
 					<tr align="center"><td>5</td><td>basic html/css</td>
 					<tr align="center"><td>6</td><td>basic Java Sript</td>
 					<tr align="center"><td>7</td><td>Django first steps</td>
-					<tr align="center"><td>8</td><td>Forms, class-based views</td>
+					<tr align="center"><td>8</td><td>Forms, class-based views.</td>
 				</table>
 			</div>
 			<p class='glyphicon-ok'>To get more ditails please connect with us</p>
