added new styles and files

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-
+	<link href="../static/css/style.css" rel="stylesheet">
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
@@ -50,11 +50,75 @@
 
       </div>
     </div>
-
+    <div>
+    	<div class="container">
+    		<h1>PyBursa Project</h1>
+	    	<div class="container">
+	    		<h3>Description</h3>
+	    		<p class="first-p">	
+	    			В этом курсе мы сместили акцент в сторону практики.
+					Будет умеренное количество теории - максимум практики.
+					Примерное соотношение теории и практики: 30% на 70%
+					Курсы будут проходить с 19 октября по 28 декабря.
+					Практические занятия в аудитории + онлайн лекции.
+	    		</p>
+	    	</div>
+	    	<div class="container">
+	    		<h3>Program</h3>
+	    		<ul>
+	    			<li id="list">
+			    		<p>
+			    			<h5>
+			    			zen, pep8, pylint, tools, IDE
+							консоль, типы данных, операторы
+							синтаксис управляющих конструкций (if, for...)
+							исключения и разбор стектрейса
+							кодировка в Python
+							</h5>
+			    		</p>
+			    	</li>
+			    	<li id="list2">
+			    		<p>
+			    			<h5>
+			    			работа со строками и итерируемыми типами
+							запуск скрипта и параметры
+							git http://try.github.com/levels/
+							</h5>
+			    		</p>
+			    	</li>
+			    	<li id="list3">
+			    		<p>
+			    			<h5>
+			    			функции (def, lambda)
+							генераторы списков
+							модули, структура	
+							</h5>
+			    		</p>
+			    	</li>
+			    	<li>
+			    		<p>
+			    			<h5>
+				    		встроенные библиотеки http://docs.python.org/
+							сторонние библиотеки (менеджер пакетов) PYPI
+							PYTHONPATH и виртуальное окружение
+							</h5>
+			    		</p>
+			    	</li>
+			    	<li>
+			    		<p>
+			    			<h5>
+			    			синтаксис, атрибуты, методы, инстанцирование
+							все объект, служебные методы
+							</h5>
+			    		</p>
+			    	</li>
+	    		</ul>
+	    	</div>	
+	    </div>
+    </div>
       <!-- FOOTER -->
       <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+
       </footer>
 
     </div><!-- /.container -->
