--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,6 +14,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
     <link href="carousel.css" rel="stylesheet">
@@ -96,55 +97,59 @@
     <!-- Marketing messaging and featurettes
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
-
+    <div class="container">
+      <h3 id="pybursa">
+        <p>
+          Запишись на курсы Python<br>
+          Попади в тренд современной WEB разработки вместе с PyBursa<br>
+        </p>
+      </h3>
+    </div>
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
           <img class="img-circle" src="../static/images/darka.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Дария Михалевич</h2>
-          <p>Менеджер ItBursa</p>
+          <h2>Manager</h2>
+          <ul>
+            <li>Name: Дария Михалевич</li>
+            <li>Skype: darka.darka.darka.darka.</li>
+            <li>Email: daria.mykhalevych@gmail.com</li>
+            <li>Phone: +38 096 469 15 57</li>
+          </ul>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="../static/images/pasha.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Павел Обод</h2>
-          <p>Основатель ItBursa</p>
+          <h2>Founder</h2>
+          <ul>
+            <li>Name: Павел Обод</li>
+            <li>Skype: azaless</li>
+            <li>Email: itbursa100@gmail.com</li>
+            <li>Phone: +38 096 469 15 57</li>
+          </ul>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="../static/images/alena.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Алена Чайка</h2>
-          <p>Оплата курсов</p>
+          <h2>Director</h2>
+          <ul>
+            <li>Name: Алена Чайка</li>
+            <li>Skype: alena.itbursa</li>
+            <li>Email: alena.itbursa@gmail.com</li>
+            <li>Phone: +38 063 625 07 55</li>
+          </ul>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
-
-      <!-- START THE FEATURETTES -->
-
-      <hr class="featurette-divider">
-
-
-      <hr class="featurette-divider">
-
-      <hr class="featurette-divider">
-
-      <hr class="featurette-divider">
-
-      <!-- /END THE FEATURETTES -->
-
-
       <!-- FOOTER -->
       <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+
       </footer>
 
     </div><!-- /.container -->
-
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
