--- a/templates/contact.html
+++ b/templates/contact.html
@@ -28,7 +28,7 @@
     </nav>
     <div class="jumbotron" id="boom">
         <div class="container">
-            <h1><center>Our Contacts!</center></h1>
+            <h1>Our Contacts!</h1>
             <br>
             <div class="row">
                 <div class="col-lg-4">
