--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,6 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand" href="index.html"><img src="../static/images/logo.jpg" alt="img"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -42,31 +43,74 @@
         <!-- /.container-fluid -->
     </nav>
     <div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<hr/>
-				<h2>Director</h2>
-				<p>Name:<span class="red">Pavel</span></p>
-				<p>Skype:<span class="green">Pavel</span></p>
-				<p>Email:<span class="blue">example@gmail.com</span></p>
-				<p>Phone:<span class="purple">0630000000</span></p>
-
-				<hr/>
-				<h2>Manager</h2>
-				<p>Name:<span class="orange">Daria</span></p>
-				<p>Skype:<span class="black">Daria</span></p>
-				<p>Email:<span class="lemon">example@gmail.com</span></p>
-				<p>Phone:<span class="dark-blue">0630000000</span></p>
-
-				<hr/>
-				<h2>Founder</h2>
-				<p>Name:<span class="ff">Noname</span></p>
-				<p>Skype:<span class="dark-orange">Noname</span></p>
-				<p>Email:<span class="blue">example@gmail.com</span></p>
-				<p>Phone:<span class="purple">0630000000</span></p>
-
-			</div>
-		</div>
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="dark-orange">Our command</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <img src="../static/images/director.jpg" alt="image">
+                    <div class="caption">
+                        <h3 class="blue">Director</h3>
+                        <ul>
+							<li>Name: <span class="red">Director</span></li>
+							<li>Skype: <span class="green">Director.111</span></li>
+							<li>Email: <span class="orange">example@gmail.com</span></li>
+							<li>Phone: <span class="purple">0630000000</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <img src="../static/images/manager.jpg" alt="image">
+                    <div class="caption">
+                        <h3 class="blue">Manager</h3>
+                        <ul>
+							<li>Name: <span class="red">Manager</span></li>
+							<li>Skype: <span class="green">Manager.111</span></li>
+							<li>Email: <span class="orange">example@gmail.com</span></li>
+							<li>Phone: <span class="purple">0630000000</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <img src="../static/images/founder.jpg" alt="image">
+                    <div class="caption">
+                        <h3 class="blue">Founder</h3>
+                        <ul>
+							<li>Name: <span class="red">Founder</span></li>
+							<li>Skype: <span class="green">Founder.111</span></li>
+							<li>Email: <span class="orange">example@gmail.com</span></li>
+							<li>Phone: <span class="purple">0630000000</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+<!--         <h2>Director</h2>
+        <p>Name:<span class="red">Pavel</span></p>
+        <p>Skype:<span class="green">Pavel</span></p>
+        <p>Email:<span class="blue">example@gmail.com</span></p>
+        <p>Phone:<span class="purple">0630000000</span></p>
+        <hr/>
+        <h2>Manager</h2>
+        <p>Name:<span class="orange">Daria</span></p>
+        <p>Skype:<span class="black">Daria</span></p>
+        <p>Email:<span class="lemon">example@gmail.com</span></p>
+        <p>Phone:<span class="dark-blue">0630000000</span></p>
+        <hr/>
+        <h2>Founder</h2>
+        <p>Name:<span class="ff">Noname</span></p>
+        <p>Skype:<span class="dark-orange">Noname</span></p>
+        <p>Email:<span class="blue">example@gmail.com</span></p>
+        <p>Phone:<span class="purple">0630000000</span></p> -->
+    </div>
+    </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
