--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand" href="index.html"><img src="../static/images/logo.jpg" alt="img"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -44,11 +45,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-            
-            	<h1>PyBursa</h1>
+            	<h1>Курсы <b>PyBursa</b></h1>
                 <h2>Description</h2>
-                <p>Наибольшей проблемой всех учебников и статей, по которым начинают изучать Python - это осутствие практики с освоенным материалом.</p>
-                <p>Можно читать тонны ресурсов по веб-программированию на Python - и не научиться ничему, потому что знания, которые вы не успели применить,очень быстро забываются.</p>
                 <p>Наибольшей проблемой всех учебников и статей, по которым начинают изучать Python - это осутствие практики с освоенным материалом.</p>
                 <p>Можно читать тонны ресурсов по веб-программированию на Python - и не научиться ничему, потому что знания, которые вы не успели применить,очень быстро забываются.</p>
                 <h2>Program</h2>
@@ -64,8 +62,7 @@
                         <tr>
                             <td>01 </td>
                             <td>Основы Python </td>
-                            <td>zen, pep8, pylint, tools, IDE консоль, типы данных, операторы
-синтаксис управляющих конструкций (if, for...) исключения и разбор стектрейса кодировка в Python </td>
+                            <td>zen, pep8, pylint, tools, IDE консоль, типы данных, операторы синтаксис управляющих конструкций (if, for...) исключения и разбор стектрейса кодировка в Python </td>
                         </tr>
                         <tr>
                             <td>02 </td>
