--- a/templates/index.html
+++ b/templates/index.html
@@ -32,24 +32,24 @@
     </div>
     <div class="container">
         <div class="content" id="desc-id">
-            <h3 class="tag-name"> of <span id="sh"><b><em>pyBursa</em></b></span> course</h3>
-            <p><span class="glyphicon glyphicon-search" aria-hidden="true"></span>Язык программирования Python — это мощный инструмент для создания программ самого разнообразного назначения, доступный даже для новичков. С его помощью можно решать задачи
-                различных типов.</p>
-            <p><span class="glyphicon glyphicon-scissors" aria-hidden="true"></span>Python обладает некоторыми примечательными особенностями, которые обуславливают его широкое распространение.</p>
-            <p><span class="glyphicon glyphicon-scissors" aria-hidden="true"></span>К примеру, python интенсивно применяется IT-гигантами, такими как, например, Google и Yandex. К тому же простота и универсальность python делают его одним из лучших языков
-                программирования.
+            <h3 class="tag-name"><span id="sh"><b><em>pyBursa</em></b></span> course</h3>
+            <p><span class="glyphicon glyphicon-scissors" aria-hidden="true"></span><i>Язык программирования <strong>Python</strong> — это мощный инструмент для создания программ самого разнообразного назначения, доступный даже для новичков. С его помощью можно решать задачи
+                различных типов.</i></p>
+            <p><span class="glyphicon glyphicon-scissors" aria-hidden="true"></span><i><strong>Python</strong> обладает некоторыми примечательными особенностями, которые обуславливают его широкое распространение.</i></p>
+            <p><span class="glyphicon glyphicon-scissors" aria-hidden="true"></span><i>К примеру, <strong>python</strong> интенсивно применяется IT-гигантами, такими как, например, Google и Yandex. К тому же простота и универсальность python делают его одним из лучших языков
+                программирования.</i>
             </p>
-            <p><span class="glyphicon glyphicon-scissors" aria-hidden="true"></span>Таким образом, python подходит для решения львиной доли повседневных задач.</p>
+            <p><span class="glyphicon glyphicon-scissors" aria-hidden="true"></span><i>Таким образом, <strong>python</strong> подходит для решения львиной доли повседневных задач.</i></p>
         </div>
         <div class="container" id="program">
-            <h1><center>Program</center></h1>
+            <h1 class="text-center">Program</h1>
         </div>
         <div class="content" id="text">
             <p>
                 <img src="../static/images/cool.png" alt="Учёные, находящиеся в состоянии аффекта" class="rightimg">
-                <b>В наших секретных лабораториях в рамках проекта &laquo;Пандора&raquo; разрабатывалось
-     психотропное оружие. В результате неудачного эксперимента большинство ученых, работавших 
-     над прибором, подверглись воздействию психотропного излучения, и они, находясь в состоянии 
+                <b class="text-warning">В наших секретных лабораториях в рамках проекта &laquo;Python&raquo; разрабатывалось
+     ПО. В результате неудачного эксперимента большинство ученых, работавших 
+     над прибором, подверглись воздействию успеха, и они, находясь в состоянии 
      аффекта, растащили прототип по деталям. Возможно, наши ученые до сих пор находятся в 
      состоянии аффекта.</b>
             </p>
