--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -42,7 +42,7 @@
           <tr>
           <th>
            <h2> Director</h2>
-          <p><img id="director" alt = "director" src ="../static/images/director.jpg"/></br>
+          <p><img class = "con-info" alt = "director" src ="../static/images/director.jpg"/></br>
             Name: Nickolas Fury </br>
             Skype: nick_fury </br>
             Email: director@shield.ru </br>
@@ -50,7 +50,7 @@
           </p></th>
           <th>
           <h2> Manager</h2>
-          <p><img id="manager" alt = "manager" src ="../static/images/manager.jpg"/></br>
+          <p><img class = "con-info"alt = "manager" src ="../static/images/manager.jpg"/></br>
           Name: Pepper Potts </br>
             Skype: ppots </br>
             Email: rescue@stark.com </br>
@@ -59,7 +59,7 @@
           
           <th>
           <h2> Manager</h2>
-          <p><img id="founder" alt = "founder" src ="../static/images/founder.jpg"/></br>
+          <p><img class = "con-info" alt = "founder" src ="../static/images/founder.jpg"/></br>
           Name: Tonny Stark </br>
             Skype: ironman14 </br>
             Email: iam@ironman.ru </br>
