--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-            	<h1>Курсы PyBursa</h1>
+            	<h1>PyBursa</h1>
                 <h2>Description</h2>
                 <p>Наибольшей проблемой всех учебников и статей, по которым начинают изучать Python - это осутствие практики с освоенным материалом.</p>
                 <p>Можно читать тонны ресурсов по веб-программированию на Python - и не научиться ничему, потому что знания, которые вы не успели применить,очень быстро забываются.</p>
