--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- SAMPLE COMMENT -->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Main</title>
-
+    <link rel="shortcut icon" type="image/x-icon" href="../static/images/favicon.ico" />
     <link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
-
   </head>
-  <body>
+  <body class="sl-background">
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
-        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="navbar-header">
+          <a class="navbar-brand" href="index.html">
+            <img class="sl-brand" alt="GodsBursa" src="../static/images/gb-logo.jpg">
+          </a>
+        </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Main<span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
             <li><a href="contact.html">Contacts</a></li>
             </li>
           </ul>
@@ -24,17 +28,60 @@
       </div><!-- /.container-fluid -->
     </nav>
     <div class="slash-div">
-    <h1>Description</h1>
+    Welcome to God's Bursa, lucky man! In our cource we will teach you code like a God (or try to do it). Good luck !
+    <h2>Description of God's Bursa</h2>
         <div style="container">
-            Welcome to GodBursa course!
+        On our cource you have possibility to learn:<br><br>
+            <dl>
+              <dt>Python</dt>
+              <dd>Python is a programming language that lets you work more quickly and integrate your systems more effectively.<br>
+    You can learn to use Python and see almost immediate gains in productivity and lower maintenance costs. </dd><br>
+              <dt>HTML</dt>
+              <dd>HyperText Markup Language, commonly referred to as HTML, is the standard markup language used to create web pages. Along with CSS, and JavaScript, HTML is a cornerstone technology, used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications. [1] Web browsers can read HTML files and render them into visible or audible web pages. HTML describes the structure of a website semantically along with cues for presentation, making it a markup language, rather than a programming language.</dd><br>
+              <dt>CSS</dt>
+              <dd>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.[2]</dd><br>
+              <dt>GIT</dt>
+              <dd> Git is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.
+Git is easy to learn and has a tiny footprint with lightning fast performance. It outclasses SCM tools like Subversion, CVS, Perforce, and ClearCase with features like cheap local branching, convenient staging areas, and multiple workflows. </dd><br>
+              </dl>
+   And many other thinds...
         </div>    
-    <h2>Program</h2>
+    <h2>Program of God's Bursa</h2>
         <div style="container">
-            Here are some description
+            <dl>
+              <dt> Lesson 0: Introduction (2 hours) </dt>
+              <dd style="big-text">
+We will begin with an introduction from the instructor. More specifically, we will talk about the projects we will build and the ideas we will learn in this course. Then we will conduct a short test to ensure you have all the prerequisites necessary for the course. Finally, we will work together to download Python on your computer.</dd>
+              <dt>Lesson 1: Using Functions (3.5 hours)</dt>
+              <dd style="big-text">We will use functions (webbrowser.open and os.rename) from the Python Standard Library to build two projects in this lesson. After that we will present a scenario where using functions will not present a very elegant solution; this will illuminate the need for a new programming tool called Classes.</dd>
+            <dt>Lesson 2: Using Classes (5 hours)</dt>
+            <dd>Here we will learn about important object-oriented programming concepts like classes and instances. We will build three cool projects while using classes. These include drawing shapes with Turtle, sending text messages with Twilio and checking curse words with a function called open.<br>
+We will leverage modules from within the Python Standard Library and also learn to download and use an external Python package (twilio).</dd>
+            <dt>Lesson 3: Making Classes (5 hours)</dt>
+            <dd>In this lesson we will learn to create our first class. While doing this we will build a website that plays trailers of your favorite movies. Here are some of the programming ideas we will learn in this lesson:
+        <ul>
+    <li>How to create a class</li>
+    <li> How to instantiate an object</li>
+    <li> How to access class attributes and methods</li>
+    <li>What is the self keyword</li>
+    <li>What are constructors (__init__)</li>
+    <li> What are DocStrings</li>
+    <li>How to create and access Class Variables</li>
+    <li>How does Inheritance work</li>
+    <li>How to override methods</li>
+            </ul></dd>
+        <dt>Final Project (6 hours)</dt>
+        <dd>Here, you will use the skills learned in this course to identify a problem statement and idea for a project. You will then identify step-by step directions (in simple English) to design a solution for the previously identified problem. Finally, you will use this design and your newly learned object-oriented programming skills to write code to realize your project.</dd>
+            </dl>
         </div>
     </div>
- 
+   </div>
+    <br><br>
+    </div>
+      <div class="navbar-fixed-bottom row-fluid">
+      <div class="panel-footer sl-footer">&copy; Stalker inc., 2015+</div>
+    </div>
    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+   <script src="../static/js/bootstrap.min.js"></script>
   </body>
 </html>
