--- a/templates/contact.html
+++ b/templates/contact.html
@@ -30,9 +30,9 @@
         <div class="container">
             <div class="row" id="rombo">
                 <div class="col-lg-4">
-                    <img class="img-circle" src="../static/images/betman.jpg" alt="Generic placeholder image" width="140" height="140">
+                    <img class="img-circle" src="../static/images/betman.jpg" alt="Generic placeholder image">
                     <div class="caption">
-                        <h3><strong>Director</strong></h3>
+                        <h3 id="soho"><strong>Director</strong></h3>
                         <address>
         Name: Batman<br>
         Skype: batmobile<br>
@@ -42,9 +42,9 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <img class="img-circle" src="../static/images/cat.jpg" alt="Generic placeholder image" width="140" height="140">
+                    <img class="img-circle" src="../static/images/cat.jpg" alt="Generic placeholder image">
                     <div class="caption">
-                        <h3><strong>Manager</strong></h3>
+                        <h3 id="soho"><strong>Manager</strong></h3>
                         <address>
         Name: Cat<br>
         Skype: catmobile<br>
@@ -54,9 +54,9 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <img class="img-circle" src="../static/images/robin.jpg" alt="Generic placeholder image" width="140" height="140">
+                    <img class="img-circle" src="../static/images/robin.jpg" alt="Generic placeholder image">
                     <div class="caption">
-                        <h3><strong>Founder </strong></h3>
+                        <h3 id="soho"><strong>Founder </strong></h3>
                         <address>
         Name: Robin<br>
         Skype: robmobile<br>
