--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="container">
         <div class="content" id="desc-id">
-            <h3 class="tag-name"><span id="sh"><b><em>pyBursa</em></b></span> course</h3>
+            <h3 class="tag-name"><span id="sh"><b><em>pyBursa</em></b></span> <span id="soho2">course</span></h3>
             <p><span class="glyphicon glyphicon-scissors" aria-hidden="true"></span><i>Язык программирования <strong>Python</strong> — это мощный инструмент для создания программ самого разнообразного назначения, доступный даже для новичков. С его помощью можно решать задачи
                 различных типов.</i></p>
             <p><span class="glyphicon glyphicon-scissors" aria-hidden="true"></span><i><strong>Python</strong> обладает некоторыми примечательными особенностями, которые обуславливают его широкое распространение.</i></p>
