--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Welcome to PyBursa</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body class="area">
    
     <nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -29,8 +30,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">PyBursa</a>
-    </div>
+      <!-- <a class="navbar-brand" href="#">PyBursa</a>-->
+    <!-- <div class="navbar-brand" >Bursa
+</div>-->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -49,28 +51,28 @@
 
 <div class="panel panel-default">
   <!-- Default panel contents -->
-  <div class="panel-heading">Course Guide and Coach</div>
-  <div class="panel-body">
-  	<div class="page-header">
- 		 <h1>Director <small>of course</small></h6>
- 		 <p>Name: Obod Pavel</p>
- 		 <p>Email: itbursa100@gmail.com</p>
- 		 <p>Skype: azaless</p>
- 		 <p>Phone: +38 063 625 07 55</p>
+  <div class="panel-heading">PyBursa is an education company. But not one in the way you might think. We're committed to building the best learning experience inside and out, making PyBursa the best place for our team to learn, teach, and create the online learning experience of the future.</div>
+  <div class="panel" class="panel-body">
+  	<div class="page"class="page-header">
+ 		 <h1 >Director <small>of course</small></h6>
+ 		 <p><b>Name:</b> Obod Pavel</p>
+ 		 <p><b>Email:</b> itbursa100@gmail.com</p>
+ 		 <p><b>Skype:</b> azaless</p>
+ 		 <p><b>Phone:</b> +38 063 625 07 55</p>
  		</div>
-		<div class="page-header">
+		<div class="page"class="page-header">
  		 <h1>Manager <small>of course</small></h6>
- 		 <p>Name: Persianova Olena</p>
- 		 <p>Email: itbursa100@gmail.com</p>
- 		 <p>Skype: azaless</p>
- 		 <p>Phone: +38 063 625 07 55</p>
+ 		 <p><b>Name:</b> Persianova Olena</p>
+ 		 <p><b>Email:</b> itbursa100@gmail.com</p>
+ 		 <p><b>Skype:</b> azaless</p>
+ 		 <p><b>Phone:</b> +38 063 625 07 55</p>
 		</div>
-		<div class="page-header">
+		<div class="page"class="page-header">
  		 <h1>Founder <small>of course</small></h6>
- 		 <p>Name: Radchenko Aleksey</p>
- 		 <p>Email: itbursa100@gmail.com</p>
- 		 <p>Skype: azaless</p>
- 		 <p>Phone: +38 063 625 07 55</p>
+ 		 <p><b>Name:</b> Radchenko Aleksey</p>
+ 		 <p><b>Email:</b> itbursa100@gmail.com</p>
+ 		 <p><b>Skype:</b> azaless</p>
+ 		 <p><b>Phone:</b> +38 063 625 07 55</p>
 		</div>
   
   </div>
