--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   <body>
       <nav class="navbar navbar-default">
         <div class="navbar-header">
-            <a class="navbar-brand">
+            <a class="navbar-brand" href='#'>
             <img class="logo-minions" alt="Logo Pretty Minions" src="../static/images/logo.png" height="45px" style="margin-top: -10px"></a>
           </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
