--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,9 +14,9 @@
         <a class="navbar-brand" href='#'>
         <img class="logo-minions" alt="Logo Pretty Minions" src="../static/images/logo.png" height="45px" style="margin-top: -10px"></a>
       </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+          <li><a href="index.html">Main</a></li>
           <li class="active"><a href="contact.html">Contacts</a></li>
         </ul>
       </div>
