--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
             <a class="navbar-brand" href='#'>
             <img class="logo-minions" alt="Logo Pretty Minions" src="../static/images/logo.png" height="45px" style="margin-top: -10px"></a>
           </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
             <li><a href="contact.html">Contacts</a></li>      
