--- a/templates/contact.html
+++ b/templates/contact.html
@@ -28,7 +28,7 @@
           <img src="../static/images/darka.jpg" alt="center" width="50%" height="50%">
           <div class="caption">
             <div class="page-header">
-              <h2>Дария Михалевич    <small>Менеджер ItBursa</small>
+              <h2>Дария Михалевич    <small>Manager</small>
               </h2>
             </div>
           <p>daria.mykhalevych@gmail.com</p>
@@ -44,7 +44,7 @@
           <img src="../static/images/pasha.jpg" alt="center" width="50%" height="50%">
           <div class="caption">
             <div class="page-header">
-              <h2>Павел Обод    <small>Основатель ItBursa</small>
+              <h2>Павел Обод    <small>Founder</small>
               </h2>
             </div>
             <p>itbursa100@gmail.com</p>
@@ -59,7 +59,7 @@
           <img src="../static/images/alena.jpg" alt="center" width="50%" height="50%">
           <div class="caption">
             <div class="page-header">
-              <h2>Татьяна Орехова    <small>Оплата курсов</small>
+              <h2>Татьяна Орехова    <small>Director</small>
               </h2>
             </div>
             <p>to096540848@gmail.com</p>
