added icon, corrected styles

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,6 +9,8 @@
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/ico">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -41,16 +43,16 @@
           <table class = "contacts" cellpadding = "100">
           <tr>
           <th>
-           <h2> Director</h2>
-          <p><img class = "con-info" alt = "director" src ="../static/images/director.jpg"/></br>
+           <h2 class = "contact-header"> Director</h2>
+          <p class = "condata"><img class = "con-info" alt = "director" src ="../static/images/director.jpg"/></br>
             Name: Nickolas Fury </br>
             Skype: nick_fury </br>
             Email: director@shield.ru </br>
             Phone: 144 - 78 - 92 </br>
           </p></th>
           <th>
-          <h2> Manager</h2>
-          <p><img class = "con-info"alt = "manager" src ="../static/images/manager.jpg"/></br>
+          <h2 class = "contact-header"> Manager</h2>
+          <p class = "condata"><img class = "con-info"alt = "manager" src ="../static/images/manager.jpg"/></br>
           Name: Pepper Potts </br>
             Skype: ppots </br>
             Email: rescue@stark.com </br>
@@ -58,8 +60,8 @@
           </p></th>
           
           <th>
-          <h2> Founder</h2>
-          <p><img class = "con-info" alt = "founder" src ="../static/images/founder.jpg"/></br>
+          <h2 class = "contact-header"> Founder</h2>
+          <p class = "condata"><img class = "con-info" alt = "founder" src ="../static/images/founder.jpg"/></br>
           Name: Tonny Stark </br>
             Skype: ironman14 </br>
             Email: iam@ironman.ru </br>
