--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
-
+    <link href="../static/css/style.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/ico">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -36,10 +37,20 @@
     </nav>    
      <div class= "container">    
       <div class="jumbotron">
-        <h1>Description</h1>
+        <h1>Description</h1><hr>
         <p>Learn to program in Python, a powerful language used by sites like YouTube and Dropbox.</p>
+        
+        <p class ="nota-bene">5 Reasons why Python is Powerful Enough for Google </p>
+        <ul class ="whypython">
+        <li>Python is Efficient
+        <li>Python is Fast
+        <li>Python is Broad
+        <li>Python is not Python
+        <li>Python is Easy
+        </ul>
+        <hr>
         <h2>Programm</h2>
-        <ol>
+        <ol class = "courseinfo">
           <li>Getting Started</li>
           <li>Python Set Up</li>
           <li>Introduction</li>
